# homogeneous-encoder

./: .gitignore  Makefile  README.md  minimal_p_homogeneous_encoder.py  p_homogeneous_encoder.py  pyproject.toml  rewrite_p_hom_encoder.py  store.tex
2025_report/: PAPER_PLAN.md  README.md  neurips_2025.tex  old.tex  references.bib
docs/: ARCHITECTURE.md  CHANGES.md  LATENT_STRUCTURE.md  imortant_summary_ARCHITECTURE.md
experiments/: .gitignore  README.md
experiments/climate/: README.md  config.yaml  download.py  preprocess.py  run.py  run_all.sh  viz_climate.py
experiments/exp01_curved_surface/: README.md  run.py
experiments/exp02_flexible_toy_ablation/: run.py
experiments/exp03_ambient_dim_sweep/: README.md  run.py
experiments/exp04_intrinsic_dim_sweep/: README.md  run.py
experiments/exp05_tail_index_sweep/: README.md  run.py
experiments/exp06_homogeneity_degree_sweep/: README.md  run.py
experiments/exp07_network_size_sweep/: README.md  run.py
experiments/exp08_curved_surface_pareto_margins/: README.md  run.py
experiments/exp09_curved_surface_pareto_margins_two_sided/: README.md  run.py
experiments/lib/: README.md  artifacts.py  cli.py  config.py  data.py  determinism.py  evaluation.py  extremes.py  metrics.py  models.py  preprocessing.py  sweep.py  train.py  viz.py
experiments/lib/viz/: __init__.py  _base.py  manifold_plots.py  marginal_diagnostics.py  panel_sets.py  sweep_plots.py  tail_plots.py
tests/: test_artifact_roundtrip.py  test_determinism.py  test_hill_estimator.py
